29-05-2022 Completed UI using Admin LTE template

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53011,7 +53011,7 @@ a.text-muted:hover {
   border-color: #4b545c !important;
 }
 /*# sourceMappingURL=adminlte.css.map */
-/* @charset "UTF-8"; */
+@charset "UTF-8";
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
